--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,13 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
+      args:
+        - API_BASE_URL=${EXTERNAL_BACKEND_URL:-http://localhost:5000}
+        - LODVIEW_URL=${EXTERNAL_LODVIEW_URL:-http://localhost:8080}
+        - VIRTUOSO_URL=${EXTERNAL_VIRTUOSO_URL:-http://localhost:8890}
+        - GRAPH_BASE_URI=${GRAPH_BASE_URI:-http://localhost:8080}
     ports:
-      - "4200:80"
+      - "${FRONTEND_PORT:-4200}:80"
     depends_on:
       - backend
     networks:
@@ -19,10 +24,19 @@ services:
       context: ./backend
       dockerfile: Dockerfile
     ports:
-      - "5000:5000"
+      - "${BACKEND_PORT:-5000}:5000"
     environment:
-      - VIRTUOSO_URL=http://virtuoso:8890
-      - FLASK_ENV=production
+      - VIRTUOSO_URL=${VIRTUOSO_URL:-http://virtuoso:8890}
+      - EXTERNAL_VIRTUOSO_URL=${EXTERNAL_VIRTUOSO_URL:-http://localhost:8890}
+      - EXTERNAL_LODVIEW_URL=${EXTERNAL_LODVIEW_URL:-http://localhost:8080}
+      - EXTERNAL_BACKEND_URL=${EXTERNAL_BACKEND_URL:-http://localhost:5000}
+      - EXTERNAL_FRONTEND_URL=${EXTERNAL_FRONTEND_URL:-http://localhost:4200}
+      - GRAPH_BASE_URI=${GRAPH_BASE_URI:-http://localhost:8080}
+      - DEFAULT_GRAPH_NAME=${DEFAULT_GRAPH_NAME:-default}
+      - FLASK_ENV=${FLASK_ENV:-production}
+      - FLASK_DEBUG=${FLASK_DEBUG:-false}
+      - MAX_CONTENT_LENGTH=${MAX_CONTENT_LENGTH:-1073741824}
+      - DBA_PASSWORD=${DBA_PASSWORD:-dba}
     depends_on:
       - virtuoso
     networks:
@@ -34,12 +48,12 @@ services:
   virtuoso:
     image: tenforce/virtuoso:latest
     ports:
-      - "8890:8890"
-      - "1111:1111"
+      - "${VIRTUOSO_HTTP_PORT:-8890}:8890"
+      - "${VIRTUOSO_SQL_PORT:-1111}:1111"
     environment:
-      - DBA_PASSWORD=dba
-      - SPARQL_UPDATE=true
-      - DEFAULT_GRAPH=http://localhost/graph/default
+      - DBA_PASSWORD=${DBA_PASSWORD:-dba}
+      - SPARQL_UPDATE=${SPARQL_UPDATE:-true}
+      - DEFAULT_GRAPH=${GRAPH_BASE_URI:-http://localhost:8080}/${DEFAULT_GRAPH_NAME:-default}
     volumes:
       - virtuoso-data:/database
     networks:
@@ -49,11 +63,11 @@ services:
   lodview:
     image: linkeddatacenter/lodview:latest
     ports:
-      - "8080:8080"
+      - "${LODVIEW_PORT:-8080}:8080"
     environment:
-      LODVIEW_SPARQLENDPOINT: http://virtuoso:8890/sparql
-      LODVIEW_URISPACE: http://localhost:8080/
-      LODVIEW_PUBLICURLPREFIX: auto
+      LODVIEW_SPARQLENDPOINT: ${VIRTUOSO_URL:-http://virtuoso:8890}/sparql
+      LODVIEW_URISPACE: ${GRAPH_BASE_URI:-http://localhost:8080}/
+      LODVIEW_PUBLICURLPREFIX: ${EXTERNAL_LODVIEW_URL:-http://localhost:8080}/
     depends_on:
       - virtuoso
     networks:
